@@ -22,6 +22,9 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.35  2004/11/26 13:06:00  jimmyo
+# Bugfix in munin-html, when using groups/host names with more than one dot.
+#
 # Revision 1.34  2004/11/21 14:39:23  jimmyo
 # Renamed function munin_get_val to munin_get.
 #
@@ -699,11 +702,11 @@ sub munin_get_picture_filename {
 	my $dir     = $config->{'htmldir'};
 
     # Sanitise
-	$dir =~ s/[^\w_\/"'\[\]\(\)+=-]/_/;
-	$domain =~ s/[^\w_\/"'\[\]\(\)+=-]/_/;
-	$name =~ s/[^\w_\/"'\[\]\(\)+=-]/_/;
-	$service =~ s/[^\w_\/"'\[\]\(\)+=-]/_/;
-	$scale =~ s/[^\w_\/"'\[\]\(\)+=-]/_/;
+	$dir =~ s/[^\w_\/"'\[\]\(\)+=-]/_/g;
+	$domain =~ s/[^\w_\/"'\[\]\(\)+=\.-]/_/g;
+	$name =~ s/[^\w_\/"'\[\]\(\)+=\.-]/_/g;
+	$service =~ s/[^\w_\/"'\[\]\(\)+=-]/_/g;
+	$scale =~ s/[^\w_\/"'\[\]\(\)+=-]/_/g;
 
 	if (defined $sum and $sum)
 	{
